--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -10,6 +10,7 @@
 <div class="back_main">
 <input type="radio" name="group" class="switcher-value" checked>
 <input type="radio" name="group" class="switcher-value-2">
+<input type="radio" name="group" class="switcher-value-3">
     <div class="container">
         <div class="rad">
             <div class="icon"></div>
