--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -14,6 +14,7 @@
 <input type="radio" name="group" class="switcher-value-2" title="">
 <input type="radio" name="group" class="switcher-value-3" title="">
     <div class="b-popup" id="popup1" onclick="javascript:PopUpHide()"></div>
+    <a href="/" class="home_button">Home</a>
     <div class="container">
         <div class="rad">
             <div class="icon"></div>
