Выделил polls в отдельный js файл, для читабельности

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "css/top_menu.css" %}">
         <script src="{% static "js/libs/jquery-1.11.3.min.js" %}"></script>
         <script src="{% static "js/libs/main.js" %}"></script>
+        <script src="{% static "js/libs/polls.js" %}"></script>
         <script src="{% static "comment.js" %}"></script>
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.2/trianglify.min.js"></script>
@@ -22,22 +23,6 @@
                     dataType: "json",
                     success: $("a#clickme").replaceWith('<a href="/auth/login/">' +
                         '<img src="{% static "img/button/enter.png" %}"></a></li>')
-                });
-            });
-            $("a#polls").click(function(event) {
-                event.preventDefault();
-                $.ajax({
-                    url: "/polls/",
-                    type: "GET",
-                    data: "",
-                    dataType: "json",
-                    success: function(json) {
-                        var div_with_polls = $('#poll_list');
-                        div_with_polls.empty();
-                        json.forEach(function(item){
-                            div_with_polls.append('<li><a href="'+ 'polls/' + item.pk + '"' + '>' + item.fields.question +'</a></li>');
-                        });
-                    }
                 });
             });
         });
@@ -68,7 +53,7 @@
                 <a id="polls">Опрос</a>
                 <div id="poll_list">
                 </div>
-            <hr>
+                <hr>
             {% block article %}{% endblock %}
             {% block login %}{% endblock %}
             </div>
