--- a/src/polls/templates/polls/detail.html
+++ b/src/polls/templates/polls/detail.html
@@ -1,7 +1,7 @@
-<h1>{{ poll.question }}</h1>
+<h2>{{ poll.question }}</h2>
 
 {%  if error_message  %}
-    <p><strong>{{ error_message }}</strong></p>
+    <h2>{{ error_message }}</h2>
 {% endif %}
 
 <form action="{% url "polls:vote" poll.id %}" method="post">
