--- a/src/polls/templates/polls/result.html
+++ b/src/polls/templates/polls/result.html
@@ -6,4 +6,4 @@
     {% endfor %}
 </ul>
 
-<a href="{% url "polls:detail" poll.id %}">Vote again?</a>
+<a id="polls_number" href="polls/{{ poll.id }}">Vote again?</a>
