Пока что не знаю что делать со стилем. Позже надо подобрать гамму цветовую

--- a/src/static/css/top_menu.css
+++ b/src/static/css/top_menu.css
@@ -32,7 +32,8 @@ body {
     height: 50px;
 }
 label {
-    color: #E1E80E;
+    color: greenyellow;
+    background-color: green;
 }
 p {
     color: #E1E80E;
