--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -63,6 +63,7 @@
             <p>Linux<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
             <p>Wimdows<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
             <p>Mac os x<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+            <p>iOs<br><img id="rating" src="../static/img/rating/ranting_5.png"></p>
         </div>
     </div>
 
@@ -82,19 +83,25 @@
                     <li> Проекты:
                         <ul>
                             <li>База данных мобильных приложений.</li>
-                            <li>Сервис для хранения, редактирования и добавления переводов</li>
+                            <li>Сервис для хранения, редактирования<br> и добавления переводов</li>
                             <li>Сервис для взаимосдествия между отделами</li>
                             <li>Сервис для компиляции iOs приложений</li>
                             <li>Сервис для компиляции Android приложений</li>
                             <li>Сервис для компиляции Windows приложений</li>
                             <li>Сервис для компиляции Unity исходников</li>
+                            <li>Сервис office для отображение сотрудников,<br> учета времени и заказа обедов</li>
                         </ul>
                     </li>
                     <li> Навыки:
                         <ul>
-                            <li>Имею опыт управления командой (~4 человека) разработчиков</li>
+                            <li>Имею опыт управления командой <br>(~4 человека) разработчиков</li>
                             <li>Создание распределенной системы (builder)<br> используя технологии RabbitMQ или Redis, Celery</li>
                             <li>Знаком с рекламными сетями (Mopub, AdMob, Amazon)<br> и способ интегрирования данных сетей</li>
+                            <li>Умение находить информации в Google,<br> и быстро применять ее на деле</li>
+                            <li>Deploying django серверов на mac os x, linux</li>
+                            <li>Написание unit тестов, владение CI: jenkins</li>
+                            <li>Проведение презентаций по научным темам</li>
+                            <li>Составление документации</li>
                         </ul>
                     </li>
                 </ol>
@@ -150,6 +157,8 @@
                 <p>Kivy</p>
                 <p>Git</p>
                 <p>Ruby</p>
+                <p>C++</p>
+                <p>ООП</p>
             </div>
             <div id="params_rating">
                 <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
@@ -158,11 +167,13 @@
                 <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
                 <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
                 <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
+                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
                 <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
                 <p><img id="rating" src="../static/img/rating/ranting_3.png"></p>
                 <p><img id="rating" src="../static/img/rating/ranting_5.png"></p>
-                <p><img id="rating" src="../static/img/rating/ranting_4.png"></p>
-                <p><img id="rating" src="../static/img/rating/ranting_3.png"></p>
             </div>
         </div>
         <h3><img src="../static/img/academ.png">ОБРАЗОВАНИЕ</h3>
