--- a/src/templates/resume.html
+++ b/src/templates/resume.html
@@ -102,6 +102,9 @@
                             <li>Написание unit тестов, владение CI: jenkins</li>
                             <li>Проведение презентаций по научным темам</li>
                             <li>Составление документации</li>
+                            <li>Умение объяснить технические моменты,<br> людям, далеким от разработки</li>
+                            <li>Высокая стрессоустойчивость</li>
+                            <li>Неистовое желание постоянно учиться новому</li>
                         </ul>
                     </li>
                 </ol>
